examples/datalog/12_errors/64_empty_rule_body_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_empty_body_n12t64
Knowledge graph 'test_empty_body_n12t64' created.
Switched to knowledge graph: test_empty_body_n12t64
> .kg use test_empty_body_n12t64
Switched to knowledge graph: test_empty_body_n12t64
> bad_rule(X) :- .
Script error: Parse error: Empty rule body with head variables is not allowed. Use 'foo(constant).' for facts, or add body predicates.
